# python-micro

./: .pdm.toml  .talismanrc  README.md  dependabot.yml  pyproject.toml
.github/workflows/: ci.yml  super_linter.yml
src/: main.py
