[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.261",
]

[project]
name = "micro-py"
version = "0.1.0"
description = "micro service in python"
authors = [
    {name = "Akagi201", email = "akagi201@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
